modif config.yml

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,6 +1,7 @@
 backend:
-  name: git-gateway
+  name: github
   branch: master
+  repo: jacnux/jac-archive
 media_folder: public/images
 public_folder: /images
 publish_mode: editorial_workflow
