--- a/meta/authors.yml
+++ b/meta/authors.yml
@@ -1,6 +1,4 @@
 authors:
-  - slug: wutali
-    name: Takahiro Fujiwara
-    introduction:
-      Co-founder and CTO at Fuller, Inc. / Software & Data Engineer /
-      Python / Golang / React
+  - slug: jac
+    name: Jean Canal
+    introduction: Un site de lien video ...
