--- a/meta/tags.yml
+++ b/meta/tags.yml
@@ -1,13 +1,7 @@
 tags:
   - slug: document
     name: document
-  - slug: mock
-    name: mock
-  - slug: style
-    name: style
-  - slug: license
-    name: license
-  - slug: mdx
-    name: mdx
-  - slug: markdown
-    name: markdown
+  - slug: photo_rue
+    name: Photographie de rue
+  - slug: photographe
+    name: Photographe
