ajout de apruzzese

--- a/meta/tags.yml
+++ b/meta/tags.yml
@@ -12,4 +12,6 @@ tags:
   - slug: lumiere
     name: "Lumiére "
   - slug: tec
-    name  Photo Tachnique
+    name  Photo Technique
+  - slug: dev
+    name  Photo Developpement
