--- a/meta/tags.yml
+++ b/meta/tags.yml
@@ -12,6 +12,6 @@ tags:
   - slug: lumiere
     name: "Lumiére "
   - slug: tec
-    name  Photo Technique
+    name: Photo Technique
   - slug: dev
-    name  Photo Developpement
+    name: Photo Developpement
