--- a/meta/authors.yml
+++ b/meta/authors.yml
@@ -4,5 +4,5 @@ authors:
     introduction: Co-founder and CTO at Fuller, Inc. / Software & Data Engineer /
       Python / Golang / React
   - slug: jac
-    name: Jean Albert Canal
+    name: Jac
     introduction: mes videos
