Update Meta “tags”

--- a/meta/tags.yml
+++ b/meta/tags.yml
@@ -21,3 +21,5 @@ tags:
     name: Nik Collection
   - slug: portrait
     name: Photographe - portrait
+  - slug: culture
+    name: Culture Photographique
